--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -4,7 +4,7 @@ on:
     workflow_dispatch:
         inputs:
             version:
-                description: 'Version to release (e.g., 0.0.2)'
+                description: '0.0.1'
                 required: true
                 type: string
 
