--- a/.github/workflows/publish-artifact.yml
+++ b/.github/workflows/publish-artifact.yml
@@ -12,27 +12,29 @@ jobs:
         name: Publish artifact via The Central Portal
 
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
-                  ref: ${{ github.ref_name }}
+            -   name: Checkout repository
+                uses: actions/checkout@v4
+                with:
+                    fetch-depth: 0
+                    ref: ${{ github.ref_name }}
 
-            - name: Set up JDK 21
-              uses: actions/setup-java@v4
-              with:
-                  java-version: '21'
-                  distribution: 'temurin'
-                  cache: maven
-                  server-id: central
-                  server-username: MAVEN_USERNAME
-                  server-password: MAVEN_CENTRAL_TOKEN
-                  gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
-                  gpg-passphrase: MAVEN_GPG_PASSPHRASE
+            -   name: Set up JDK 21
+                uses: actions/setup-java@v4
+                with:
+                    java-version: '21'
+                    distribution: 'temurin'
+                    cache: maven
+                    cache-dependency-path: Java/pom.xml
+                    server-id: central
+                    server-username: MAVEN_USERNAME
+                    server-password: MAVEN_CENTRAL_TOKEN
+                    gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+                    gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
-            - name: Publish artifact
-              run: mvn clean deploy -P deployment
-              env:
-                  MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
-                  MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
-                  MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+            -   name: Publish artifact
+                run: mvn clean deploy -P deployment
+                working-directory: Java
+                env:
+                    MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+                    MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
+                    MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
