--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.mihaistreames</groupId>
     <artifactId>afe</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3</version>
     <packaging>jar</packaging>
 
     <name>AlgorithmsForEveryone</name>
@@ -60,6 +60,13 @@
             <version>5.11.4</version>
             <scope>test</scope>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
